# pipes

./: Cargo.toml
benches/: ringbuf.rs
examples/: read_line.rs  read_line_v2.rs
src/: config.rs  ctrl.rs  dyn.rs  io.rs  lib.rs  owning_slice.rs  pipeline.rs  ringbuf.rs  utils.rs
src/io/: read.rs  write.rs
