[package]
name = "pipes"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-utils = { version = "0.8.21", default-features = false }
pin-project-lite = "0.2.16"
slice-dst = "1.6.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ringbuf"
harness = false
