[package]
name = "pipes"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
crossbeam-utils = { version = "0.8.21", default-features = false }
mio = { version = "1.0.3", features = ["os-poll"] }
pin-project-lite = "0.2.16"
slab = "0.4.9"
slice-dst = "1.6.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
criterion = "0.5.1"
tmpdir = "1.0.0"

[[bench]]
name = "ringbuf"
harness = false
